Bug #226604 --> crash closing message compose window (with UI button)/message filter dialog

fix crash regression. Patch by timeless

sr=mscott
a=asa